<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/user"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_hearth"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_config"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Cerrar sesion"/>
    </group>

</menu>