<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto.principal.NavbarSide.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.proyecto.principal.NavbarSide.ui.perfil.PerfilFragment"
        android:gravity ="center"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.proyecto.principal.NavbarSide.ui.recipes.RecipesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/nav_config"
        android:name="com.example.proyecto.principal.NavbarSide.ui.config.ConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.proyecto.principal.NavbarSide.ui.mapa.MapsFragment"
        android:label="Mapa"
        tools:layout="@layout/fragment_maps"/>

</navigation>